# OpenTimelineIO

./: MANIFEST.in  README.md
.github/workflows/: python-package.yml
docs/tutorials/: otio-plugins.md  otio-serialized-schema.md
src/OTIOApp/: settings.gradle
src/OTIOApp/app/: build.gradle
src/OTIOApp/app/src/main/: AndroidManifest.xml
src/OTIOApp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/OTIOApp/app/src/main/java/io/opentimeline/: OTIOObject.java
src/OTIOApp/app/src/main/java/io/opentimeline/opentime/: RationalTime.java  TimeRange.java  TimeTransform.java
src/OTIOApp/app/src/main/java/io/opentimeline/opentimelineio/: AnyDictionary.java  AnyVector.java  Clip.java  Composable.java  Composition.java  Effect.java  ExternalReference.java  FreezeFrame.java  Gap.java  GeneratorReference.java  ImageSequenceReference.java  Item.java  LinearTimeWarp.java  Marker.java  MediaReference.java  MissingReference.java  SerializableCollection.java  SerializableObjectWithMetadata.java  Stack.java  TimeEffect.java  Timeline.java  Track.java  Transition.java  UnknownSchema.java
src/OTIOApp/app/src/main/res/values/: strings.xml
src/OTIOApp/gradle/wrapper/: gradle-wrapper.properties
src/OTIOApp/otioview/: build.gradle
src/OTIOApp/otioview/src/androidTest/java/io/opentimeline/otioview/: ExampleInstrumentedTest.java
src/OTIOApp/otioview/src/main/: AndroidManifest.xml
src/OTIOApp/otioview/src/main/java/io/opentimeline/otioview/: MainActivity.java
src/OTIOApp/otioview/src/main/res/values/: strings.xml
src/OTIOApp/otioview/src/test/java/io/opentimeline/otioview/: ExampleUnitTest.java
src/opentimelineio/: CMakeLists.txt  trackAlgorithm.cpp
src/py-opentimelineio/opentimelineio-bindings/: otio_serializableObjects.cpp
src/py-opentimelineio/opentimelineio/core/: _core_utils.py
tests/: test_opentime.py
